PageRating/src/objects/Record_Page_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <referenceTo>Record_Page__c</referenceTo>
        <relationshipLabel>Ratings</relationshipLabel>
        <relationshipName>Record_Page_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Record Page Rating</label>
    <nameField>
        <displayFormat>RTG-{00000}</displayFormat>
        <label>Rating #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Page Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>